# BlockDevice

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
tools/: BlockDevice.cpp  BlockDevice.hpp  CMD.cpp  CMD.hpp  Command_Line.cpp  Command_Line.hpp  Exceptions.h  Partition.cpp  Partition.hpp  Partition_tools.hpp  TextColor.h
